<resources>
    <string name="app_name">Truth Table</string>
    <string name="description">Conjunction (AND)</string>
    <string name="submit_button">SUBMIT</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="ab">A ^ B</string>
    <string name="false_text">F</string>
    <string name="true_text">T</string>
    <string name="empty"> </string>
    <string name="correct"> Correct </string>
    <string name="hint"> T / F</string>
</resources>
