<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    ​
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        ​
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">
            ​
            <TextView
                android:id="@+id/textTrue4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="55dp"
                android:text="@string/true_text"
                android:textSize="36sp"
                app:layout_constraintStart_toEndOf="@+id/textFalse2"
                app:layout_constraintTop_toBottomOf="@+id/textFalse" />
            ​
            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                android:text="@string/app_name"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            ​
            <TextView
                android:id="@+id/tableA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="49dp"
                android:layout_marginTop="119dp"
                android:text="@string/a"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            ​
            <TextView
                android:id="@+id/tableB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="40dp"
                android:text="@string/b"
                android:textSize="36sp"
                app:layout_constraintStart_toEndOf="@+id/tableA"
                app:layout_constraintTop_toBottomOf="@+id/titleText" />
            ​
            <TextView
                android:id="@+id/tableAnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="81dp"
                android:text="@string/ab"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleText" />

            <TextView
                android:id="@+id/textTrue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="49dp"
                android:layout_marginTop="45dp"
                android:text="@string/true_text"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableA" />
            ​
            <TextView
                android:id="@+id/textTrue2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="49dp"
                android:layout_marginTop="55dp"
                android:text="@string/true_text"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTrue" />
            ​
            <TextView
                android:id="@+id/textTrue3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="45dp"
                android:text="@string/true_text"
                android:textSize="36sp"
                app:layout_constraintStart_toEndOf="@+id/textTrue"
                app:layout_constraintTop_toBottomOf="@+id/tableB" />
            ​
            <TextView
                android:id="@+id/textFalse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="55dp"
                android:text="@string/false_text"
                android:textSize="36sp"
                app:layout_constraintStart_toEndOf="@+id/textTrue2"
                app:layout_constraintTop_toBottomOf="@+id/textTrue3" />
            ​
            <TextView
                android:id="@+id/textFalse2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="49dp"
                android:layout_marginTop="55dp"
                android:text="@string/false_text"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTrue2" />
            ​
            <TextView
                android:id="@+id/textFalse3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="49dp"
                android:layout_marginTop="55dp"
                android:text="@string/false_text"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFalse2" />
            ​
            <TextView
                android:id="@+id/textFalse4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="55dp"
                android:text="@string/false_text"
                android:textSize="36sp"
                app:layout_constraintStart_toEndOf="@+id/textFalse3"
                app:layout_constraintTop_toBottomOf="@+id/textTrue4" />
            ​

            <EditText
                android:id="@+id/input1"
                android:layout_width="101dp"
                android:layout_height="66dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="75dp"
                android:digits="TF"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint"
                android:inputType="textCapCharacters"
                android:maxLength="1"
                android:textAllCaps="false"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableAnd" />
            ​

            <EditText
                android:id="@+id/input2"
                android:layout_width="101dp"
                android:layout_height="66dp"
                android:layout_marginTop="37dp"
                android:layout_marginEnd="75dp"
                android:digits="TF"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint"
                android:inputType="textCapCharacters"
                android:maxLength="1"
                android:textAllCaps="false"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input1" />
            ​

            <EditText
                android:id="@+id/input3"
                android:layout_width="101dp"
                android:layout_height="66dp"
                android:layout_marginTop="37dp"
                android:layout_marginEnd="75dp"
                android:digits="TF"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint"
                android:inputType="textCapCharacters"
                android:maxLength="1"
                android:textAllCaps="false"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input2" />
            ​

            <EditText
                android:id="@+id/input4"
                android:layout_width="101dp"
                android:layout_height="66dp"
                android:layout_marginTop="37dp"
                android:layout_marginEnd="75dp"
                android:digits="TF"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint"
                android:inputType="textCapCharacters"
                android:maxLength="1"
                android:textAllCaps="false"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input3" />
            ​
            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="230dp"
                android:layout_height="54dp"
                android:layout_marginStart="95dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="95dp"
                android:text="@string/submit_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFalse4" />
            ​
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    ​
</androidx.constraintlayout.widget.ConstraintLayout>